# brief-CICD_2

./: .pre-commit-config.yaml  .secrets.baseline  BRIEF_CI_CD_V2.md  CHANGELOG.md  PROBLEMES_DETECTES.md  README.md  VEILLE_CICD.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  release.yml
app/: database.py  main.py
app/models/: item.py
app/routes/: items.py
app/schemas/: item.py
tests/: test_items.py
