[project]
name = "training-ci-cd-semantic-release"
version = "0.1.0"
description = "CRUD API with PostgreSQL for managing items"
requires-python = ">=3.13"

# ============================================================================
# DEPENDENCIES
# ============================================================================
dependencies = [
    "fastapi[standard]>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "diagrams>=0.24.4",
]
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
