[project]
name = "training-ci-cd-semantic-release"
version = "0.1.0"
description = "CRUD API with PostgreSQL for managing items"
requires-python = ">=3.13"

# ============================================================================
# DEPENDENCIES
# ============================================================================
dependencies = [
    "fastapi[standard]>=0.121.0",
    "pre-commit>=4.4.0",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
    "vulture>=2.14",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "detect-secrets>=1.5.0",
    "diagrams>=0.24.4",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=10.5.2",
    "ruff>=0.14.6",
]
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --cov=app --cov-report=term-missing"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"


[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
